通信の調整

--- a/index.html
+++ b/index.html
@@ -16,8 +16,8 @@
           <p id="question">いろはすですか？</p>
         </div>
         <div class="choice">
-          <button type="button" name="button" class="choice-btn" onclick="onClick(this, 'はい')">はい</button>
-          <button type="button" name="button" class="choice-btn" onclick="onClick(this, 'いいえ')">いいえ</button>
+          <button type="button" name="button" class="choice-btn" onclick="onClick(this, true)">はい</button>
+          <button type="button" name="button" class="choice-btn" onclick="onClick(this, false)">いいえ</button>
         </div>
       </div>
     </div>
